# strachech

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  config.example.toml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS
data/: QQQ.csv
docs/: START_HERE.md  case-study.md  common-pitfalls.md  index.md  interview.md  quickstart.md  release-milestones.md  resume_bullets.md  security-secrets.md  showcase.md
scripts/: benchmark_experiments.py  build_site.py  docker_runner.py  generate_showcase_assets.py  make_demo_assets.py  make_screenshots.py  post_summary.py
stratcheck/: __init__.py  __main__.py  cli.py
tests/: test_audit_replay.py  test_backtest.py  test_backtest_engine.py  test_backtest_engine_v2.py  test_benchmark_experiments.py  test_bundle_cli.py  test_calendar.py  test_cli_config.py  test_cli_create_strategy.py  test_cli_demo.py  test_corporate_actions.py  test_cost_models.py  test_dashboard_cli.py  test_dashboard_query.py  test_data_provider.py  test_execution_quality_analysis.py  test_experiments.py  test_experiments_parallel.py  test_fill_models.py  test_healthcheck.py  test_make_demo_assets.py  test_metrics.py  test_ops_alerts.py  test_ops_kill_switch.py  test_ops_secrets.py  test_orchestrator_manager.py  test_overfit.py  test_paper_connector.py  test_perf_incremental.py  test_perf_parquet_cache.py  test_plots.py  test_portfolio_engine_v2.py  test_post_summary.py  test_property_fuzz.py  test_quality_guard_cli.py  test_quality_guards.py  test_real_paper_connector.py  (+13 more)
(+77 files in other folders)
