[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stratcheck"
version = "0.1.0"
description = "Generate a strategy health-check report from demo OHLCV data."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  { name = "stratcheck contributors" },
]
keywords = ["backtest", "trading", "quant", "reporting", "strategy"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
  "matplotlib>=3.8",
  "numpy>=1.26",
  "pandas>=2.2",
  "plotly>=5.20",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "hypothesis>=6.112",
  "pytest>=8.0",
  "ruff>=0.6.0",
]
perf = [
  "pyarrow>=16",
]
release = [
  "build>=1.2",
  "twine>=5.1",
]

[project.scripts]
stratcheck = "stratcheck.cli:main"

[tool.setuptools.packages.find]
include = ["stratcheck*"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["stratcheck", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
